more structure and publish workflow

--- a/docker-content/tag-der-technik/experiments/experiments.ipynb
+++ b/docker-content/tag-der-technik/experiments/experiments.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tag der Technik"
+    "# Tag der Technik\n",
+    "\n",
+    "Willkommen zum Tag der Technik `TEXT TEXT TEXT`\n",
+    "\n",
+    "## Aufgaben\n",
+    "### Aufgabe 1 &mdash; Autoren Eintragen\n",
+    "Trage deinen Namen (und ggf. deine Schule) an der entsprechenden Stelle in `paper.tex` ein.\n",
+    "\n",
+    "### Aufgabe 2 &mdash; Mit LaTeX und Python vertraut machen\n",
+    "\n",
+    "### Aufgabe 3 &mdash; Eine Forschungsfrage entwickeln und Experimentieren"
    ]
   },
   {
@@ -43,21 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompt Engineering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Validieren"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Testen"
+    "### Aufgabe 4 &mdash; Paper schreiben"
    ]
   }
  ],
