--- a/docker-content/tag-der-technik/paper/paper.tex
+++ b/docker-content/tag-der-technik/paper/paper.tex
@@ -19,10 +19,12 @@
 
 \title{Tag der Technik}
 
+% Aufgabe 1
 \author{First Author\\
   <School> \\\And
   Second Author \\
-  <School> \\}
+  <School> \\
+}
 
 \begin{document}
 \maketitle
