--- a/docker-content/tag-der-technik/paper/bibliography.bib
+++ b/docker-content/tag-der-technik/paper/bibliography.bib
@@ -1,4 +1,4 @@
-@inproceedings{vaswani17,
+@inproceedings{vaswani2017,
   author       = {Ashish Vaswani and
                   Noam Shazeer and
                   Niki Parmar and
@@ -23,5 +23,45 @@
   url          = {https://proceedings.neurips.cc/paper/2017/hash/3f5ee243547dee91fbd053c1c4a845aa-Abstract.html},
   timestamp    = {Thu, 21 Jan 2021 15:15:21 +0100},
   biburl       = {https://dblp.org/rec/conf/nips/VaswaniSPUJGKP17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{jiang2024,
+  author       = {Albert Q. Jiang and
+                  Alexandre Sablayrolles and
+                  Antoine Roux and
+                  Arthur Mensch and
+                  Blanche Savary and
+                  Chris Bamford and
+                  Devendra Singh Chaplot and
+                  Diego de Las Casas and
+                  Emma Bou Hanna and
+                  Florian Bressand and
+                  Gianna Lengyel and
+                  Guillaume Bour and
+                  Guillaume Lample and
+                  L{\'{e}}lio Renard Lavaud and
+                  Lucile Saulnier and
+                  Marie{-}Anne Lachaux and
+                  Pierre Stock and
+                  Sandeep Subramanian and
+                  Sophia Yang and
+                  Szymon Antoniak and
+                  Teven Le Scao and
+                  Th{\'{e}}ophile Gervet and
+                  Thibaut Lavril and
+                  Thomas Wang and
+                  Timoth{\'{e}}e Lacroix and
+                  William El Sayed},
+  title        = {Mixtral of Experts},
+  journal      = {CoRR},
+  volume       = {abs/2401.04088},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2401.04088},
+  doi          = {10.48550/ARXIV.2401.04088},
+  eprinttype    = {arXiv},
+  eprint       = {2401.04088},
+  timestamp    = {Wed, 24 Jan 2024 16:19:32 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2401-04088.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
