--- a/docker-content/tag-der-technik/paper/bibliography.bib
+++ b/docker-content/tag-der-technik/paper/bibliography.bib
@@ -65,3 +65,16 @@
   biburl       = {https://dblp.org/rec/journals/corr/abs-2401-04088.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{srivastava2023,
+  author       = {Aarohi Srivastava and others},
+  title        = {Beyond the Imitation Game: Quantifying and extrapolating the capabilities
+                  of language models},
+  journal      = {Trans. Mach. Learn. Res.},
+  volume       = {2023},
+  year         = {2023},
+  url          = {https://openreview.net/forum?id=uyTL5Bvosj},
+  timestamp    = {Tue, 06 Aug 2024 08:09:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/tmlr/SrivastavaRRSAF23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
