--- a/docker-content/tag-der-technik/paper/paper.tex
+++ b/docker-content/tag-der-technik/paper/paper.tex
@@ -26,9 +26,9 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-Large language models are ...
-However, some tasks are more difficult than others. Additionally, prompt engineering still plays a major role...
-In a small user study, we demonstrate the effect of prompt engineering on the task of ........
+Large language models can be used to tackle natural language tasks that were previously not properly solvable by computers.
+However, some tasks are more difficult than others. Additionally, prompt engineering has a major effect on the quality of the results.
+In a small user study, we demonstrate the effect of prompt engineering on the task of \todo{generating humorous jokes}.
 \end{abstract}
 
 \section{Introduction}
