--- a/docker-content/tag-der-technik/paper/boxplot.tex
+++ b/docker-content/tag-der-technik/paper/boxplot.tex
@@ -1,41 +1,27 @@
 \documentclass[tikz]{standalone}
-\RequirePackage{pgfplots}
-\RequirePackage{expl3,xparse}
-
-\usepgfplotslibrary{statistics}
-
-\ExplSyntaxOn
-\NewDocumentCommand \IfStringInList {mmmm}{ \clist_if_in:nnTF {#2} {#1} {#3} {#4} }
-\ExplSyntaxOff
-\pgfplotsset{
-  compat=1.18,
-  filter by/.style 2 args={
-    /pgfplots/boxplot/data filter/.append code={
-      \edef\tmp{\noexpand\IfStringInList{\thisrow{#1}}{#2}{}{\noexpand\def\noexpand\pgfmathresult{}}}
-      \tmp
-    }
-  }
-}
-
-\usetikzlibrary{patterns}
-\pgfplotscreateplotcyclelist{webis}{
-  semithick,draw=black,fill=white,mark=*,\\
-  semithick,draw=black,pattern=north east lines,mark=o,mark options=solid\\
-  semithick,draw=black,pattern=crosshatch dots,mark=x,mark options=solid\\
-  semithick,draw=black,pattern=crosshatch,mark=x,mark options=solid\\
-  semithick,draw=black,pattern=north west lines\\
-  semithick,draw=black,pattern=grid\\
-}
+\usepackage{definitions}
 
 \begin{document}
     \begin{tikzpicture}
         \begin{axis}[
           boxplot,
           cycle list name=webis,
+          xmin = 1, xmax = 5,
+          axis lines*=left,
+          xlabel = {Rating},
+          ylabel = {Prompt},
+          tick label style={font=\small},
+          y tick label style = {font=\scshape, rotate=45, anchor=east},
+          yticklabels={Expert,Advanced,Simple},
+          ytick = {1,2,3},
+          xminorgrids=true,
+          xmajorgrids=true,
+          %minor x tick num=1,
+          axis line style={draw=none},
         ]
-        \addplot+[filter by={{Prompt}{simple}}] table[x=Topic,y=Rating] {../experiments/results.csv};
-        \addplot+[filter by={{Prompt}{advanced}}] table[x=Topic,y=Rating] {../experiments/results.csv};
-        \addplot+[filter by={{Prompt}{expert}}] table[x=Topic,y=Rating] {../experiments/results.csv};
+        \addplot+[filter by={{Prompt}{Expert}}] table[x=Topic,y=Rating] {../experiments/results.csv};
+        \addplot+[filter by={{Prompt}{Advanced}}] table[x=Topic,y=Rating] {../experiments/results.csv};
+        \addplot+[filter by={{Prompt}{Simple}}] table[x=Topic,y=Rating] {../experiments/results.csv};
         \end{axis}
     \end{tikzpicture}
 \end{document}
