--- a/docker-content/tag-der-technik/experiments/experiments.ipynb
+++ b/docker-content/tag-der-technik/experiments/experiments.ipynb
@@ -4,45 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tag der Technik\n",
+    "# Tag der Technik 2024 @ University of Kassel\n",
+    "## LLM Research and Paper Writing\n",
+    "Labor E12 with the Deep Semantic Learning Group (Niklas Deckers &amp; Tim Hagen)\n",
     "\n",
-    "Willkommen zum Tag der Technik `TEXT TEXT TEXT`\n",
+    "## Steps\n",
+    "### Step 1 &mdash; Fill in Author Information\n",
+    "Open `paper.tex` and fill in your names (and, if you like, school and email) at the appropriate `\\todo{...}`.\n",
     "\n",
-    "## Aufgaben\n",
-    "### Aufgabe 1 &mdash; Autoren Eintragen\n",
-    "Trage deinen Namen (und ggf. deine Schule) an der entsprechenden Stelle in `paper.tex` ein.\n",
-    "\n",
-    "### Aufgabe 2 &mdash; LaTeX and Python\n",
-    "\n",
-    "### Aufgabe 3 &mdash; Forschen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Einen Prompt formulieren, der die Aufgabe löst\n",
-    "\n",
-    "Come up with your own task that should allow for evaluation of the results on different topics or scenarios. Examples of such tasks are:\n",
-    "- Explaining a difficult concept (e.g., what a metaphor is)\n",
-    "- Cooking recipes or lists of ingredients for different meals\n",
-    "- Etymologies of different fictional or non-fictional words and phrases\n",
-    "- Communication skills: Given a socially difficult situation, the model should provide helpful advice\n",
-    "- ..."
+    "### Step 2 &mdash; Experimental Setup in Python\n",
+    "The template we prepared for you is setup already to contain the basic structure of the experiments and of the resulting paper. Execute the following example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOPICS = [\"school\", \"work\"]\n",
+    "# In Step 3, you will replace these topics with your own (for interesting results, come up with at least 10 different)\n",
+    "TOPICS = [\"school\", \"work\", \"animals\", \"science\", \"cars\", \"cats\", \"internet\", \"computers\", \"geography\", \"trains\"]\n",
     "\n",
+    "# In Step 3, you will replace these prompts according to your own task\n",
     "PROMPT_SIMPLE = \"Write a joke about the topic '{topic}'.\"\n",
-    "\n",
     "PROMPT_ADVANCED = \"Write a very funny joke about the topic '{topic}'.\"\n",
-    "\n",
     "PROMPT_EXPERT = \"You are an expert comedian with years of experience in writing the perfect jokes. Given the topic '{topic}', come up with the perfect joke.\"\n"
    ]
   },
@@ -55,244 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<h2>school</h2>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "309744d9d72941e69568bcb8a1fa1886",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value=\"<p style='border: 1px solid gray; padding: 2pt 5pt;'>\\nWhy don't ma…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae95ddf86e6740d9be2472b188769884",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edba66fcd0714e16ac49a113876155d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value=\"<p style='border: 1px solid gray; padding: 2pt 5pt;'>Why don't math…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27e08883778e4fe782e5069b77930b9c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44bc338a88974fa08f0a03034f383a72",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value=\"<p style='border: 1px solid gray; padding: 2pt 5pt;'> Why don't sch…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93aec0172f8a4fa0b0810c42fd56ffde",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4437afdc9142460888b9d26761b77fd1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<h2>work</h2>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "085df62759784e03a279abf7dd32f19c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value='<p style=\\'border: 1px solid gray; padding: 2pt 5pt;\\'>Why don\\'t w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a8fc087e9754eceb24be103fc3f7886",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cec32d8937094592ab4e1fbe6bb835b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value=\"<p style='border: 1px solid gray; padding: 2pt 5pt;'>Ah, work - the…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e83db20d64514aef85212cfbe26ce9dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73d1e8b4aadc4315a2a3d34b76279ca5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), HTML(value=\"<p style='border: 1px solid gray; padding: 2pt 5pt;'>\\nI recently g…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a9921f2b0c5478181415da16ff21a2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Rating from 1 (bad) to 5 (good)'), IntSlider(value=3, max=5, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3fe58c32c8f41728043016058473aa9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6440fdf4fe374eb9beaee03b49c8e761",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Save', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install -q ipywidgets\n",
     "import random\n",
@@ -363,7 +113,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe 4 &mdash; Paper schreiben"
+    "### Step 3 &mdash; Adapt the Experiments\n",
+    "Come up with your own task that should allow for evaluation of the generated results on different topics or scenarios. Examples of such tasks are:\n",
+    "- Explaining a difficult concept (e.g., what a metaphor is)\n",
+    "- Cooking recipes or lists of ingredients for different meals\n",
+    "- Etymologies of different fictional or non-fictional words and phrases\n",
+    "- Communication skills: Given a socially difficult situation, the model should provide helpful advice\n",
+    "- ...\n",
+    "\n",
+    "Modify the code above according to the task you came up with. Make sure to include three fitting prompts resembling different levels of expertise.\n",
+    "\n",
+    "\n",
+    "### Step 4 &mdash; Writing the Paper\n",
+    "Now that you have got your results, it is time to write the paper. Switch over to LaTeX (`paper.tex`) and replace all remaining `\\todo{...}` as appropriate."
    ]
   }
  ],
