--- a/docker-content/tag-der-technik/experiments/experiments.ipynb
+++ b/docker-content/tag-der-technik/experiments/experiments.ipynb
@@ -123,6 +123,8 @@
     "\n",
     "Modify the code above according to the task you came up with. Make sure to include three fitting prompts resembling different levels of expertise.\n",
     "\n",
+    "Run your code and rate the results. Don't forget to click on save.\n",
+    "\n",
     "\n",
     "### Step 4 &mdash; Writing the Paper\n",
     "Now that you have got your results, it is time to write the paper. Switch over to LaTeX (`paper.tex`) and replace all remaining `\\todo{...}` as appropriate."
