--- a/docker-content/tag-der-technik/paper/definitions.sty
+++ b/docker-content/tag-der-technik/paper/definitions.sty
@@ -45,3 +45,8 @@
   semithick,draw=black,pattern=north west lines\\
   semithick,draw=black,pattern=grid\\
 }
+
+
+\clubpenalty = 10000
+\widowpenalty = 10000
+\displaywidowpenalty = 10000
