Prepared for TdT2025

--- a/docker-content/tag-der-technik/experiments/experiments.ipynb
+++ b/docker-content/tag-der-technik/experiments/experiments.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tag der Technik 2024 @ University of Kassel\n",
+    "# Tag der Technik 2025 @ University of Kassel\n",
     "## LLM Research and Paper Writing\n",
-    "Labor E12 with the Deep Semantic Learning Group (Niklas Deckers &amp; Tim Hagen)\n",
+    "Lab with the Deep Semantic Learning Group.\n",
     "\n",
     "## Steps\n",
     "### Step 1 &mdash; Fill in Author Information\n",
@@ -44,7 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install -q ipywidgets\n",
     "import random\n",
     "import ipywidgets as widgets\n",
     "from asyncio import Event, Future\n",
@@ -95,11 +94,11 @@
     "        csv.write(\"Topic Prompt Rating\\n\")    \n",
     "        for topic, rs in ratings.items():\n",
     "            for prompt, val in rs.items():\n",
-    "                csv.write(f\"{topic.replace(' ', r'\\ ')} {prompt.replace(' ', r'\\ ')} {val.value}\\n\")\n",
+    "                csv.write(\"{} {} {}\\n\".format(topic.replace(' ', r'\\ '), prompt.replace(' ', r'\\ '), val.value))\n",
     "    # store prompts\n",
     "    with open(\"./prompts.csv\", mode=\"w\") as csv:\n",
     "        csv.write(\"Name Prompt\\n\")\n",
-    "        csv.writelines(f\"{k.replace(' ', r'\\ ')} {v.replace(' ', r'\\ ')}\\n\" for k, v in PROMPTS.items())\n",
+    "        csv.writelines(\"{} {}\\n\".format(k.replace(' ', r'\\ '), v.replace(' ', r'\\ ')) for k, v in PROMPTS.items())\n",
     "    # store topics\n",
     "    with open(\"./topics.txt\", mode=\"w\") as txt:\n",
     "        txt.write(\"{\"+\"},{\".join(TOPICS)+\"}\")\n",
@@ -116,7 +115,7 @@
     "### Step 3 &mdash; Adapt the Experiments\n",
     "Come up with your own task that should allow for evaluation of the generated results on different topics or scenarios. Examples of such tasks are:\n",
     "- Explaining a difficult concept (e.g., what a metaphor is)\n",
-    "- Cooking recipes or lists of ingredients for different meals\n",
+    "- Short cooking recipes or lists of ingredients for different meals\n",
     "- Etymologies of different fictional or non-fictional words and phrases\n",
     "- Communication skills: Given a socially difficult situation, the model should provide helpful advice\n",
     "- ...\n",
